--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 .DS_Store
+.DS_Store
+Abstract/.DS_Store
